Fix header positioning on Safari

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header h2 {
 
 header > svg {
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     width: 100%;
     height: 5vw;
